--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,61 @@
 * {
 	background-color: #181818;
-	color:aliceblue
+	color: aliceblue;
 }
 
 body {
 	height: 100%;
-	width: 100%;
+	width: 95%;
 	margin: 5;
 	padding: 0;
 }
 
 h1 {
 	text-decoration: underline;
+}
+
+.topLabel {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.addProject {
+	border-radius: 50%;
+	height: 8vh;
+	width: 8vh;
+	margin: 1rem;
+	font-size: large;
+	font-weight: bold;
+	cursor: pointer;
+	background-color: #e9e9ed;
+	color: black;
+	transform: scale(1);
+	transition: 100ms;
+}
+
+.addProject:hover {
+	transform: scale(1.05);
+	transition: 100ms;
+	border: green 3px solid;
+}
+
+button {
+	border: none;
+	color: rgb(0, 0, 0);
+	border-radius: 10px;
+	font-size: 2vh;
+	margin: 0.5vh;
+	cursor: pointer;
+	transition: 100ms;
+	font-weight: bold;
+	width: fit-content;
+	height: 3vh;
+	background-color: #d1cfcf;
+	margin-bottom: 0.5vh;
+}
+
+button:hover {
+	transform: scale(1.1);
+	transition: 100ms;
 }
