--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,8 @@
 	color: aliceblue;
 }
 
-body {
-	height: 100%;
+.pageContainer {
+	height: 100vh;
 	width: 95%;
 	margin: 5;
 	padding: 0;
@@ -62,4 +62,51 @@ button:hover {
 
 .button-selected {
 	background-color: rgb(93, 230, 93);
+}
+.modal-content {
+	display: flex;
+	flex-direction: column;
+}
+.close {
+	align-self: flex-end;
+}
+#todoModal {
+	position: fixed; /* Stay in place */
+	z-index: 3; /* Sit on top */
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	overflow: auto; /* Enable scroll if needed */
+	padding-left: 20px;
+	padding-right: 20px;
+	border: 2px solid rgb(255, 255, 255);
+	width: 30%;
+}
+
+#todoForm {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.modalIsOpen {
+	filter: blur(1px) brightness(0.8);
+}
+body {
+	z-index: 1;
+}
+
+.close {
+	font-size: 3rem;
+}
+
+.close:hover {
+	color: rgb(255, 0, 0);
+	text-decoration: none;
+	cursor: pointer;
+}
+
+input[type="text"] {
+	width: 15rem; /* Increase the width */
+	height: 1rem; /* Increase the height */
 }
